--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="content">
 
         <div class="start">
-            <h1 class="ar-h1">Надоело стоять в очереди всю перемену?</h1>
+            <h1 class="ar-h1">Не хочешь вставать с дивана, а в магазин надо?</h1>
             <img class="ar-img1" src="img2.png" alt="">
             <h3 class="ar-h3">У нас есть решение!!!</h3>
             <img class="ar-img2" src="img3.png" alt="">
