--- a/index.html
+++ b/index.html
@@ -36,19 +36,15 @@
                      или на наш <a class="text00" href="https://wa.me/+79283241801">Whatsapp</a> на номер <strong class="text00">+79283241801</strong> за день до получения заказа не позже 21:00 <strong class="text0">(Письмо или сообщение обязательно: должно содержать текст "Заказ", 
                         вашу фамилию и дату на которую вы хотите получить заказ.
                          Дальше всё делайте строго по образцам снизу)</strong></strong></li>
-                <li><strong>Образец</strong></li>
+                <li class="wort-t"><strong>Образец</strong></li>
                 <li><strong>Заказ на 25 января
                     Снежок "Коровка из кореновки" и Булочка с вишней
                     230 рублей
                     12:45 
                     г.Пятигорск, ул.Калинина 9, квартира 58</strong></li> 
-    
-                <h4>Номера столов <strong class="text0">(обязательно указывайте в почте)</strong></h4>
-                <img class="kitchen" src="kitchen.png" alt="не найдено">
-                <li><strong>В день получения заказа Вы передаете нам деньги до 8:30 
-                    <strong class="text0">(вас в раздевалке у входа в столовую будет ждать человек в кепке)</strong>
+                <li><strong>Оплата принемается, только нальчными при получении заказа.       
                 </strong></li>
-                <li><strong>На перемене, которую Вы указали в письме, мы передадим вам ваш заказ</strong></li>
+                <li><strong>В день и время которое вы указали в заказе мы передаем вам продукты.</strong></li>
             </ul>
 
             <div class="dop">
