--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                      или на наш <a class="text00" href="https://wa.me/+79283241801">Whatsapp</a> на номер <strong class="text00">+79283241801</strong> за день до получения заказа не позже 21:00 <strong class="text0">(Письмо или сообщение обязательно: должно содержать текст "Заказ", 
                         вашу фамилию и дату на которую вы хотите получить заказ.
                          Дальше всё делайте строго по образцам снизу)</strong></strong></li>
-                <li class="wort-t"><strong>Образец</strong></li>
+                <li class="wort-t"><strong>Образец☟☟☟</strong></li>
                 <li><strong>Заказ на 25 января
                     Снежок "Коровка из кореновки" и Булочка с вишней
                     230 рублей
@@ -46,11 +46,8 @@
                 </strong></li>
                 <li><strong>В день и время которое вы указали в заказе мы передаем вам продукты.</strong></li>
             </ul>
-
-            <div class="dop">
-                <p><strong>Цена за доставку в столовую: <strong class="price">10 рублей</strong></strong></p>
-                <p><strong>Цена за доставку до какого либо класса: <strong class="price">20 рублей</strong></strong></p>
-                <p class="text0"><strong>В письме или в сообщении обязательно нужно указывать цену доставки</strong></p>
+            <div class="dop">         
+                <p><strong>Цена за доставку - <strong class="price">79 рублей</strong></strong></p>              
                 <br>
             </div>
         </div>
@@ -58,7 +55,7 @@
         <div class="problem">
             <h2>Наши гарантии:</h2>
             <ol>
-                <li><strong>Если вы не получите заказ по нашей вине на указаной перемене мы вам после уроков или на следующей перемене передадим всю сумму заказа + 5 рублей</strong></li>
+                <li><strong>Если вы не получите заказ по нашей вине, мы отдадим вам ваш заказ на следующий день обсалютно бесплатно.</strong></li>
             </ol>
         </div>
 
