--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         вашу фамилию и дату на которую вы хотите получить заказ.
                          Дальше всё делайте строго по образцам снизу)</strong></strong></li>
                 <li class="wort-t"><strong>Образец☟☟☟</strong></li>
-                <li><strong>Заказ на 25 января
-                    Снежок "Коровка из кореновки" и Булочка с вишней
-                    230 рублей
-                    12:45 
+                <li><strong>Заказ на 25 января<br><br><br>
+                    Снежок "Коровка из кореновки" и Булочка с вишней<br><br>
+                    230 рублей<br>
+                    12:45<br>
                     г.Пятигорск, ул.Калинина 9, квартира 58</strong></li> 
                 <li><strong>Оплата принемается, только нальчными при получении заказа.       
                 </strong></li>
