--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     68 рублей<br>
                     25 января, 12:45<br>
                     г.Пятигорск, ул.Калинина 9, квартира 58</strong></li> 
-                <li><strong>Оплата принемается, только нальчными при получении заказа.       
+                <li><strong>Оплата принимается, только наличными при получении заказа.       
                 </strong></li>
                 <li><strong>В день и время которое вы указали в заказе мы передаем вам продукты.</strong></li>
             </ul>
