--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="problem">
             <h2>Наши гарантии:</h2>
             <ol>
-                <li><strong>Если вы не получите заказ по нашей вине, мы отдадим вам ваш заказ на следующий день обсалютно бесплатно.</strong></li>
+                <li><strong>Если вы не получите заказ по нашей вине, мы отдадим вам ваш заказ на следующий день абсалютно бесплатно.</strong></li>
             </ol>
         </div>
 
